--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.0"
-  },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "concurrently": "^9.1.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "prisma": "^5.22.0"
+    "@prisma/client": "^6.5.0",
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "prisma": "^6.5.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.0",
+    "nodemon": "^3.1.9",
+    "typescript": "^5.8.3"
   }
 }
